# zarchive-cs

./: .gitignore  .gitmodules  Directory.Build.props  Directory.Packages.props  LICENSE  README.md  THIRD-PARTY-NOTICES.md  ZArchive.NET.slnx  justfile
native/: CMakeLists.txt
native/include/: zarchive_dotnet.h
native/src/: bridge_common.h  error.cpp  reader.cpp  version.cpp  writer.cpp
samples/CreateArchive/: Program.cs
samples/ExtractArchive/: Program.cs
samples/ListArchive/: ListArchive.csproj  Program.cs
src/ZArchive/: ArchivePath.cs  ZArchive.csproj  ZArchiveEntry.cs  ZArchiveEntryStream.cs  ZArchiveEntryType.cs  ZArchiveException.cs  ZArchiveExtractionOptions.cs  ZArchiveFile.cs  ZArchiveInfo.cs  ZArchiveReader.cs  ZArchiveWriter.cs  ZArchiveWriterEntryStream.cs
src/ZArchive/Interop/: NativeError.cs  NativeLibraryResolver.cs  NativeMethods.cs  NativeReaderHandle.cs  NativeStatus.cs  NativeWriterHandle.cs
tests/ZArchive.Tests/: ExtractionTests.cs  InfoTests.cs  ReaderTests.cs  RoundTripTests.cs  StreamTests.cs  TestUtil.cs  WriterTests.cs  ZArchive.Tests.csproj
